@@ -1,9 +1,19 @@
 def call() {
   
     withEnv([
-      'MAVEN_OPTS=--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
-    ]) {
-      sh 'mvn test'
-    }
+  'MAVEN_OPTS=--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED ' +
+              '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+]) {
+  sh 'mvn test'
+}
+
   
 }
